# src/routes/passwordRoutes.ts
@@ -3,15 +3,15 @@ import { authMiddleware } from "../middleware/authMiddleware";
 import passwordController from "../controllers/passwordController";
 import {
   validateChangePassword,
-  validateForgotPassword,
+  validateforgetPassword,
   validateResetPassword,
 } from "../validation/password.validation";
 
 const passwordRoutes = Router();
-const { changePassword, forgotPassword, resetPassword } = passwordController;
+const { changePassword, forgetPassword, resetPassword } = passwordController;
 
 passwordRoutes.route("/change").post(authMiddleware, validateChangePassword, changePassword);
-passwordRoutes.route("/forgot").post(validateForgotPassword, forgotPassword);
+passwordRoutes.route("/forget").post(validateforgetPassword, forgetPassword);
 passwordRoutes.route("/reset").post(validateResetPassword, resetPassword);
 
 export default passwordRoutes;
